--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p class="timezone"></p>
     </article>
     <article>
-        <h5>ISP</h5>
+        <abbr title="Internet Service Provider">ISP</abbr>
         <p class ="isp"></p>
     </article>
     </div>
